<resources>
    <string name="app_name">MÖRK BORG Character Sheet</string>
    <string name="license">MÖRK BORG Character Sheet is an independent production by Jake Sage and is not affiliated with Ockult Örtmästare Games or Stockholm Kartell. <br/> It is published under the MÖRK BORG Third Party License. <br/> MÖRK BORG is copyright Ockult Örtmastare Games and Stockholm Kartell.</string>
    <string name="laurem_ipsum_long">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus ullamcorper dui at lorem pharetra, et rhoncus neque consequat. Sed ac nunc in ligula aliquam condimentum sed et tortor. Sed cursus, est sed volutpat interdum, turpis purus lobortis erat, sed volutpat dolor quam eget augue. Morbi ut turpis at tortor efficitur laoreet. Aliquam vitae cursus purus. Vivamus fringilla ipsum in est mollis egestas. Praesent nec molestie urna, ac laoreet lacus. Sed tempor tempor lorem, eget interdum lorem porttitor quis. Proin tellus ipsum, consectetur in hendrerit a, volutpat eget leo.</string>
    <string name="unit_length_string">One use = one foot of length.</string>
    <string name="current_silver_string">Current Silver: </string>
    <string name="silver_string">Silver</string>
    <string name="no_purchase">Free</string>
    <string name="search">Search</string>
    <string name="to_hit_string">To Hit</string>
    <string name="damage_string">Damage</string>
    <string name="power_pres_dr_text">DR 12</string>
    <string name="defence_dialog_blocked_label">Blocked</string>
    <string name="short_rest_string">Short Rest</string>
    <string name="long_rest_string">Long Rest</string>
    <string name="level_up_string">Improve</string>
    <string name="rolled_character_button_text">Resign yourself to Fate</string>
    <string name="manual_character_button_text">Decide for yourself</string>
    <string name="roll_string">Roll</string>
    <string name="limited_uses_string">Limited Uses</string>
    <string name="new_item_2_roll_description_tip">You can embed up to two dice rolls into the description of this item with $D1 and $D2</string>
    <string name="new_item_1_roll_description_tip">You can embed a dice roll into the description with $D1</string>
    <string name="save_string">Save</string>
    <string name="new_inventory_string">Add New</string>
    <string name="add_custom">Add Custom</string>
    <string name="name_string">Character Name</string>
    <string name="description_string">Description</string>
    <string name="auto_character_string">Resign yourself to Fate</string>
    <string name="manual_character_string">Decide your own Destiny</string>
    <string name="powers_string">Powers:</string>
    <string name="hit_points">Hit Points</string>
    <string name="character_select_string">Characters</string>
    <string name="inventory">Inventory</string>
    <string name="success">Success</string>
    <string name="failure">Failure</string>
    <string name="name_required_string">Must set item name</string>
    <string name="no_uses_snackbar_string">This attack has no uses remaining</string>
    <string name="no_powers_snackbar_string">Out of power uses for the day</string>
    <string name="no_power_wearing_armor_string">Cannot use powers while wearing tier 2 or 3 armor</string>
    <string name="hit">Hit</string>
    <string name="miss">Evaded</string>
    <string name="apply_armor">Apply Armor</string>
    <string name="take_it">Take It</string>
    <string name="use_shield">Use Shield</string>
    <string name="uses">Uses</string>
    <string name="item_description_hint">Item description</string>
    <string name="item_name_hint">Item Name</string>
    <string name="added">added</string>
    <string name="cant_add_ammo_without_weapon">No weapon using this ammo owned. Add one first.</string>
    <string name="cant_afford">You can\'t afford this item</string>
    <string name="defence_crit_string">CRIT! Free attack on attacker</string>
    <string name="defence_fumble_string">FUMBLE! Double damage and armor reduced by one tier!</string>
    <string name="attack_crit_string">CRIT! Double damage!</string>
    <string name="attack_fumble_string">FUMBLE! Weapon lost or broken!</string>
    <string name="broken_title_string">BROKEN</string>
    <string name="death_title_string">DEAD</string>
    <string name="broken_dead_string">You have suffered some grizzly fate. Unless you are pulled from the jaws of death by some twisted unnatural power, your story will end here.</string>
    <string name="broken_unconscious_string_1">"Fall unconscious for "</string>
    <string name="broken_unconscious_string_2">" rounds."</string>
    <string name="broken_limb_string_1">"Broken or severed limb. Can't act for "</string>
    <string name="broken_eye_limb_string_2">" rounds."</string>
    <string name="broken_eye_string_1">"Lost an eye. Can't act for "</string>
    <string name="broken_bleed_string_1">"Bleeding out. Death in "</string>
    <string name="broken_bleed_string_2">" hours. All tests are DR 16 in the first hour and DR 18 in the final hour."</string>
    <string name="fumble">FUMBLE!</string>
    <string-array name="magic_fumbles">
        <item>One by one your teeth fall out. Long, brittle fingernails replace them in your gums. Your smile is horrific and you find it hard to eat.</item>
        <item>You feel fine, yet you pustulate with a magical STD. Those intimate with you will die of plague within D4 days, then rise as woeful weeping zombies who track you down in your dreams before finding you in reality.</item>
        <item>Your skeleton is possessed by some unearthly force and will do anything to kill you and escape. Drowning or piercing is preferred so the bones are not damaged. Test STRENGTH DR10 in stressful situations or take d4 damage. When you die you become a zombie.</item>
        <item>The illusion of the celestial sphere is lifted. You nw see what dwells beyond. And it sees you. Gazing upon a clear night sky drives you mad with fear.</item>
        <item>Around you falls an unending snow of black ash which only you and the mad can perceive. Water sickens you from this day on. Only ash, soot, or burnt remains can quench your thirst.</item>
        <item>The earth decays around you like wet flesh. You sink 3 feet and cannot climb out without help. Clinging to you, screaming and biting are D4 translucent, crayfish-like children with your face. (3 HP, Bite/Pinch D4)</item>
        <item>Your skin tatters like paper, your flesh melts like wax, and your intestines bloat like balloons, bursting and falling out until all that is left is a walking, talking skeleton.</item>
        <item>A gnashing gap-toothed mouth splits open on your neck. It spits out your secrets and inner thoughts and can be silenced to sleep only with blood.</item>
        <item>The sky warps and stars spin like wheels. Thrown one day into the future, you arrive vomiting Time as evaporating silver bile. A Misery is fulfilled.</item>
        <item>Light itself despises you. If you gaze upon a candle, lamp, or torch it goes out.</item>
        <item>Within D4 days a vile cocoon heaves itself from the ground, soon bursting and spawning your exact clone. It is unintelligent and begins to spread mischief and suffering. This happens every couple of days until the ground is cleansed with holy water or fire.</item>
        <item>Your eyes burn with insufferable agony, bleeding heavily before loosening and falling from their gory pits. You continue to see through them wherever they are.</item>
        <item>You and a random nearby creature both pass out. When you wake up, your souls have switched. Welcome to your new flesh.</item>
        <item>Five twisted, skeletal arms burst from your back. The hands are mischievous, violent and terribly cruel.</item>
        <item>Your skin pales then begins to emit a sickly greenish light. Living things held close to you slowly fall ill. They weaken, their bones become brittle, their teeth and hair fall out.</item>
        <item>The Power works, but fate or some demonic force perverts its effects to your precise disadvantage.</item>
        <item>The scroll crumbles to tendrils of fine black powder which reach for your nose and mouth. Make a DR14 TOUGHNESS test or lose D10 HP.</item>
        <item>The power pierces you like a knife, feeding on your anima. You are permanently gaunt and drawn, insatiably hungry.</item>
        <item>You fall through Refva into the esoteric dimension of Cube-Violet, a place of mythical obscurity. The walls are smooth, iridescent and cold. Above, an endless inferno.</item>
        <item>Perhaps it is for the best. HE emerges from the shadows. At least your suffering is short, almost instantaneous, as the two-headed basilisk devours you.</item>
    </string-array>
    <string-array name="magic_fumble_cube_escape">
        <item>To escape, slay riddling Kulvan (strong goblin) who holds three colorless pearls.</item>
        <item>To escape, poison a close friend with crumbled Sict-Shroom (TOUGHNESS DR16 or -D6 HP and hallucinations). They are found only within the cube.</item>
        <item>To escape, reach up through the fire to the golden key above. D4 fingers crumble to ash.</item>
        <item>The cube is perfect and empty. You can only wait in maddening timeless agony until another fool arrives.</item>
    </string-array>
    <string name="strength_string">Strength</string>
    <string name="agility_string">Agility</string>
    <string name="presence_string">Presence</string>
    <string name="toughness_string">Toughness</string>
    <string name="type_string">Type</string>
    <string name="attack_string">Attack</string>
    <string name="power_string">Power</string>
    <string name="armor_string">Armor</string>
    <string name="shield_string">Shield</string>
    <string name="other_string">Other</string>
    <string name="weapon_type_label">Weapon Type</string>
    <string name="weapon_type_melee">Melee</string>
    <string name="weapon_type_ranged">Ranged</string>
    <string name="armor_tier_string">Armor Tier</string>
    <string name="no_armor_string">No Armor</string>
    <string name="light_armor_string">Light Armor</string>
    <string name="medium_armor_string">Medium Armor</string>
    <string name="heavy_armor_string">Heavy Armor</string>
    <string name="femur_weapon_name">Femur</string>
    <string name="staff_weapon_name">Staff</string>
    <string name="shortsword_weapon_name">Shortsword</string>
    <string name="knife_weapon_name">Knife</string>
    <string name="warhammer_weapon_name">Warhammer</string>
    <string name="sword_weapon_name">Sword</string>
    <string name="bow_weapon_name">Bow</string>
    <string name="flail_weapon_name">Flail</string>
    <string name="crossbow_weapon_name">Crossbow</string>
    <string name="zweihander_weapon_name">Zweihander</string>
    <string name="zweihander_weapon_description">A massive two-handed sword. Its unwieldiness prevents the use of scrolls.</string>
    <string name="fireball_scroll_name">Palms Open the Southern Gate</string>
    <string name="fireball_scroll_description">A ball of fire hits $D1 creatures dealing $D2 damage per creature.</string>
    <string name="confusion_scroll_name">Tongue of Eris</string>
    <string name="confusion_scroll_description">A creature of your choice becomes confused for 10 minutes.</string>
    <string name="telekinesis_scroll_name">Te-le-kin-esis</string>
    <string name="telekinesis_scroll_description">Move an object up to $D1 square feet for $D2 minutes.</string>
    <string name="levetation_scroll_name">Lucy-fires Levitation</string>
    <string name="levetation_scroll_description">Hover for $D1 rounds.</string>
    <string name="suffocation_scroll_name">Daemon of Capillaries</string>
    <string name="suffocation_scroll_description">One creature suffocates for $D1 rounds, losing 1D4 HP per round.</string>
</resources>