<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="com.twotothirdpower.morkborgcharactersheet.util.DataBindingConverter" />

        <variable
            name="viewModel"
            type="com.twotothirdpower.morkborgcharactersheet.addinventory.AddInventoryViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/default_inventory_list"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="16dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toTopOf="@+id/inventory_add_custom_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/inventory_add_purchase_switch" />

        <EditText
            android:id="@+id/inventory_add_search_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:fontFamily="@font/abandon"
            android:hint="@string/search"
            android:inputType="text"
            android:text="@={viewModel.searchString}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/search_icon"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/search_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/inventory_add_search_edit_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/inventory_add_search_edit_text"
            app:srcCompat="@android:drawable/ic_menu_search" />

        <Switch
            android:id="@+id/inventory_add_purchase_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/cut_the_crap"
            android:text="@string/no_purchase"
            android:checked="@={viewModel.freeEquipment}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/inventory_add_search_edit_text"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

        <TextView
            android:id="@+id/invantory_add_silver_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="1sp"
            android:fontFamily="@font/enchanted_land"
            android:text="@string/current_silver_string"
            android:textSize="16sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/inventory_add_silver_text"
            app:layout_constraintEnd_toStartOf="@+id/inventory_add_silver_text" />

        <TextView
            android:id="@+id/inventory_add_silver_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:ems="2"
            android:fontFamily="@font/enchanted_land"
            android:text="@{DataBindingConverter.convertIntToStringNotNull(viewModel.silver)}"
            app:layout_constraintBaseline_toBaselineOf="@+id/inventory_add_purchase_switch"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="600" />

        <Button
            android:id="@+id/inventory_add_custom_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/enchanted_land"
            android:text="@string/add_custom"
            android:onClick="@{() -> viewModel.onCustomInventoryEvent()}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>