<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="com.example.morkborgcharactersheet.util.DataBindingConverter"/>
        <variable
            name="inventoryViewModel"
            type="com.example.morkborgcharactersheet.inventory.InventoryViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/inventory_parent"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/inventory_list"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toTopOf="@+id/fragment_inventory_new_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/silver_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/enchanted_land"
            android:text="@string/silver_string"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="@+id/silver_edit_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/silver_edit_text" />

        <EditText
            android:id="@+id/silver_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/enchanted_land"
            android:inputType="number"
            android:selectAllOnFocus="true"
            android:text="@={DataBindingConverter.convertIntToString(inventoryViewModel.silver)}"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/short_rest_label"
            app:layout_constraintStart_toEndOf="@+id/silver_text"
            tools:text="200" />

        <Button
            android:id="@+id/fragment_inventory_new_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/enchanted_land"
            android:onClick="@{() -> inventoryViewModel.onEditItem(-1L)}"
            android:text="@string/new_inventory_string"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/silver_edit_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/short_rest_icon"
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:onClick="@{() -> inventoryViewModel.onShortRestClicked()}"
            app:layout_constraintBottom_toTopOf="@+id/short_rest_label"
            app:layout_constraintEnd_toEndOf="@+id/short_rest_label"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/short_rest_label"
            app:layout_constraintTop_toBottomOf="@+id/fragment_inventory_new_button"
            app:layout_constraintVertical_chainStyle="packed"
            app:srcCompat="@drawable/short_rest" />

        <ImageView
            android:id="@+id/long_rest_icon"
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:layout_marginBottom="8dp"
            android:onClick="@{() -> inventoryViewModel.onLongRestClicked()}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/long_rest_label"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/long_rest_label"
            app:layout_constraintTop_toBottomOf="@+id/long_rest_label"
            app:srcCompat="@drawable/long_rest" />

        <TextView
            android:id="@+id/short_rest_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/finished_sympathy"
            android:text="@string/short_rest_string"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/long_rest_label"
            app:layout_constraintTop_toBottomOf="@+id/short_rest_icon" />

        <TextView
            android:id="@+id/long_rest_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/finished_sympathy"
            android:text="@string/long_rest_string"
            app:layout_constraintBottom_toTopOf="@+id/long_rest_icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragment_inventory_new_button"
            app:layout_constraintVertical_chainStyle="packed" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>